[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bstr = "1.0.1"
nom = "7.1.1"
nonmax = "0.5.3"
num = "0.4.0"
regex = "1.7.0"
thiserror = "1.0.37"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "bench"
harness = false
